--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,86 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
 }
 h1 {
-    font-size: 72px;
+  font-size: 72px;
 }
 h1 + p {
-    font-size: 30px;
+  font-size: 30px;
 }
 h2 {
-    font-size: 24px;
+  font-size: 24px;
 }
 p {
-    font-size: 36px;
+  font-size: 36px;
 }
 a {
-    font-size: 18px;
-    text-decoration: none;
+  font-size: 18px;
+  text-decoration: none;
 }
 .grid {
-    display: grid;
+  display: grid;
+  grid-template-areas:
+    "a a a a"
+    "a a a a"
+    "b b c c"
+    "d e f g"
+    "h h j i"
+    "m m n n";
 }
 .grid-item {
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .grid-item-main {
-    background-image: url(../img/bg-main.png);
+  background-image: url(../img/bg-main.png);
+  grid-area: a;
 }
 .grid-item-red {
-    background-image: url(../img/bg-red.png);
+  background-image: url(../img/bg-red.png);
+  grid-area: b;
 }
 .grid-item-lgray {
-    background-color: #f3f1ef;
+  background-color: #f3f1ef;
+  grid-area: c;
 }
 .grid-item-pic1 {
-    background-image: url(../img/bg-one.png);
+  background-image: url(../img/bg-one.png);
+  grid-area: d;
 }
 .grid-item-pic2 {
-    background-image: url(../img/bg-two.png);
+  background-image: url(../img/bg-two.png);
+  grid-area: e;
 }
 .grid-item-pic3 {
-    background-image: url(../img/bg-three.png);
+  background-image: url(../img/bg-three.png);
+  grid-area: f;
 }
 .grid-item-pic4 {
-    background-image: url(../img/bg-four.png);
+  background-image: url(../img/bg-four.png);
+  grid-area: g;
 }
 .grid-item-blue-text {
-
+  grid-area: h;
 }
 .grid-item-pic5 {
-    background-image: url(../img/bg-five.png);
+  background-image: url(../img/bg-five.png);
+  grid-area: j;
 }
 .grid-item-bluebg {
-    
+  grid-area: i;
 }
 .grid-item-blue {
-    background-color: #3f729b;
-    color: #fff;
+  background-color: #3f729b;
+  color: #fff;
 }
 .grid-item-green {
-    background-color: #2ebd59;
-    color: #fff;
+  background-color: #2ebd59;
+  color: #fff;
+  grid-area: m;
 }
 .grid-item-gray {
-    background-color: #282b2f;
-    color: #fff;
+  background-color: #282b2f;
+  color: #fff;
+  grid-area: n;
 }
