--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,1 @@
-body {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-}
-h1 {
-  font-size: 72px;
-  margin-top: 0;
-  margin-bottom: 41px;
-}
-h1 + p {
-  font-size: 30px;
-  margin: 0;
-}
-h2 {
-  font-size: 24px;
-  font-weight: 400;
-}
-p {
-  font-size: 36px;
-}
-a {
-  font-size: 18px;
-  text-decoration: none;
-  color: #f9f9f9;
-  border: 1px solid #f9f9f9;
-  border-radius: 60px;
-  padding: 12px 21px;
-}
-.grid {
-  display: grid;
-  grid-template-areas:
-    "a a a a"
-    "a a a a"
-    "b b c c"
-    "d e f g"
-    "h h j i"
-    "m m n n";
-}
-.grid-item {
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 500px;
-}
-.grid-item-main {
-  background-image: url(../img/bg-main.png);
-  background-position: center;
-  grid-area: a;
-  height: 890px;
-  padding: 284px 787px 348px 210px;
-}
-.grid-item-red {
-  background-image: url(../img/bg-red.png);
-  background-size: cover;
-  grid-area: b;
-}
-.grid-item-lgray {
-  background-color: #f3f1ef;
-  grid-area: c;
-  padding: 0px 198px 0px 55px;
-}
-
-.grid-item-lgray h2 {
-    margin-top: 113px;
-}
-
-.grid-item-pic1 {
-  background-image: url(../img/bg-one.png);
-  grid-area: d;
-  height: 500px;
-}
-.grid-item-pic2 {
-  background-image: url(../img/bg-two.png);
-  grid-area: e;
-}
-.grid-item-pic3 {
-  background-image: url(../img/bg-three.png);
-  grid-area: f;
-}
-.grid-item-pic4 {
-  background-image: url(../img/bg-four.png);
-  grid-area: g;
-}
-.grid-item-blue-text {
-  grid-area: h;
-  padding-left: 209px;
-  padding-right: 120px;
-}
-.grid-item-pic5 {
-  background-image: url(../img/bg-five.png);
-  grid-area: j;
-}
-.grid-item-bluebg {
-  grid-area: i;
-}
-.grid-item-blue {
-  background-color: #3f729b;
-  color: #fff;
-  
-}
-
-.grid-item-blue h2 {
-    margin-top: 124px;
-}
-
-.grid-item-green {
-  background-color: #2ebd59;
-  color: #fff;
-  grid-area: m;
-  padding-left: 209px;
-  padding-right: 70px;
-}
-
-.grid-item-green h2 {
-    margin-top: 130px;
-}
-
-.grid-item-gray {
-  background-color: #282b2f;
-  color: #fff;
-  grid-area: n;
-  padding-left: 59px;
-  padding-right: 241px;
-}
-
-.grid-item-gray h2 {
-    margin-top: 130px;
-}
+body{font-family:"Montserrat",sans-serif;font-weight:400}h1{font-size:72px;margin-top:0;margin-bottom:41px}h1 + p{font-size:30px;margin:0}h2{font-size:24px;font-weight:400}p{font-size:36px}a{font-size:18px;text-decoration:none;color:#f9f9f9;border:1px solid #f9f9f9;border-radius:60px;padding:12px 21px}.grid{display:grid;grid-template-areas:"a a a a" "a a a a" "b b c c" "d e f g" "h h j i" "m m n n"}.grid-item{background-repeat:no-repeat;background-size:cover;height:500px}.grid-item-main{background-image:url(../img/bg-main.png);background-position:center;grid-area:a;height:890px;padding:284px 787px 348px 210px}.grid-item-red{background-image:url(../img/bg-red.png);background-size:cover;grid-area:b}.grid-item-lgray{background-color:#f3f1ef;grid-area:c;padding:0 198px 0 55px}.grid-item-lgray h2{margin-top:113px}.grid-item-pic1{background-image:url(../img/bg-one.png);grid-area:d;height:500px}.grid-item-pic2{background-image:url(../img/bg-two.png);grid-area:e}.grid-item-pic3{background-image:url(../img/bg-three.png);grid-area:f}.grid-item-pic4{background-image:url(../img/bg-four.png);grid-area:g}.grid-item-blue-text{grid-area:h;padding-left:209px;padding-right:120px}.grid-item-pic5{background-image:url(../img/bg-five.png);grid-area:j}.grid-item-bluebg{grid-area:i}.grid-item-blue{background-color:#3f729b;color:#fff}.grid-item-blue h2{margin-top:124px}.grid-item-green{background-color:#2ebd59;color:#fff;grid-area:m;padding-left:209px;padding-right:70px}.grid-item-green h2{margin-top:130px}.grid-item-gray{background-color:#282b2f;color:#fff;grid-area:n;padding-left:59px;padding-right:241px}.grid-item-gray h2{margin-top:130px}
